--- a/portfolio.css
+++ b/portfolio.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
 html {
   width: 100%;
   height: 100%;
@@ -919,8 +920,9 @@ ul {
 }
 
 .images1 {
-  size: 30px;
-  filter: invert(38%) sepia(41%) saturate(291%) hue-rotate(179deg)
+  font-size: 30px;
+  filter: 
+  invert(38%) sepia(41%) saturate(291%) hue-rotate(179deg)
     brightness(88%) contrast(97%);
 }
 
